@@ -1,3 +1,8 @@
+  * doc/index.html: add list of distributions
+  * doc/replaceinit.html: point to faq.html#create, faq.html#tell (thx
+    David Kaufman).
+  * doc/runscripts.html: point to faq.html#createlog.
+  
 1.7.1
 Sat, 04 Nov 2006 19:23:29 +0000
   * chpst.c, uidgid.c, uidgid.h: support numerical uid gid through
